# IFSRS

./: Cargo.toml  README.md  cube.json
assets/: sw.js
src/: affine_editor.rs  alias_method.rs  animation_editor.rs  app.rs  automation_editor.rs  camera.rs  gpu_structs.rs  ifs.rs  ifs_kernel.wgsl  iterator.rs  lib.rs  main.rs  palette_editor.rs  pipeline_compute.rs  pipeline_render.rs  rendering.rs  response_curve_editor.rs  shader.wgsl  tests.rs  transform.rs  viewport.rs  weight_graph_editor.rs
src/editors/: affine_editor.rs  animation_editor.rs  automation_editor.rs  editor_traits.rs  mod.rs  palette_editor.rs  response_curve_editor.rs  weight_graph_editor.rs
src/editors/automation_editor/: automation editor spec.md  automation_editor.rs  block_logic.rs  blocks.rs  mod.rs  spline_editor.rs
src/editors/concepts/: automation editor spec.md  blocks.rs  hierarchy.md  mod.rs  node_graph_editor.rs  nodes.rs
src/model/: camera.rs  ifs.rs  iterator.rs  mod.rs  transform.rs
src/rendering/: gpu_structs.rs  graphics_engine.rs  ifs_kernel.wgsl  mod.rs  pipeline_compute.rs  pipeline_render.rs
src/util/: math_extensions.rs  mod.rs
transforms/: affine.toml  affine.toml.cursed  checks.toml  cube.toml
