[package]
name = "IFSRS"
version = "0.1.0"
authors = ["Samuel Marquis", "Devin Brite"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.27.2"
egui-wgpu = { version = "0.27.2", default-features = false }
egui-winit = "0.27.2"
nalgebra = { version = "0.32.5", features = ["serde-serialize"]}

wgpu = "=0.19.4"

# uses winit, egui-wgpu, and wgpu
eframe = { version = "0.27.2", default-features = false, features = [
#    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

futures = "0.3.30"

anyhow = "1.0.82"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
toml = { version ="0.8.12" }
bytemuck = "1.14.0"
rand = "0.9.0-alpha.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[lints.rust]
unused = "allow"

[patch.crates-io]